Done at 27 July 2018-11:15 AM

--- a/gallery.html
+++ b/gallery.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Mohd Adnan Ansari: Reach Me</title>
+	<title>Mohd Adnan Ansari: Gallery</title>
 	<link rel="stylesheet" type="text/css" href="css/style.css">
 	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.1.1/css/all.css" integrity="sha384-O8whS3fhG2OnA5Kas0Y9l3cfpmYjapjI0E4theH4iuMD+pLhbf6JI0jIMfYcK3yZ" crossorigin="anonymous">
 </head>
@@ -19,38 +19,39 @@
 	</header>
 	
 	<main>
-	<h1>Gallery</h1>
-	<figure>
-		<img src="img/g1.jpg" alt="Redmi Note 4">
-		<figcaption>Xiomi Redmi Note 4</figcaption>
-	</figure>
-	
-	<figure>
-		<img src="img/g2.jpg" alt="Redmi 5A">
-		<figcaption>Xiomi Redmi 5A</figcaption>
-	</figure>
-	
-	<figure>
-		<img src="img/g3.png" alt="Redmi A1">
-		<figcaption>Xiomi Redmi A1</figcaption>
-	</figure>
-	
-	<figure>
-		<img src="img/g4.jpg" alt="Redmi Note 5 Pro">
-		<figcaption>Xiomi Redmi Note 5 Pro</figcaption>
-	</figure>
-	
-	<figure>
-		<img src="img/g5.jpg" alt="Redmi A1 Blue">
-		<figcaption>Xiomi Redmi A1 Blue</figcaption>
-	</figure>
+		<div class="gallery">
+			<h1>Gallery</h1>
+			<figure>
+				<img src="img/g1.jpg" alt="Redmi Note 4">
+				<figcaption>Xiomi Redmi Note 4</figcaption>
+			</figure>
+			
+			<figure>
+				<img src="img/g2.jpg" alt="Redmi 5A">
+				<figcaption>Xiomi Redmi 5A</figcaption>
+			</figure>
+			
+			<figure>
+				<img src="img/g3.png" alt="Redmi A1">
+				<figcaption>Xiomi Redmi A1</figcaption>
+			</figure>
+			
+			<figure>
+				<img src="img/g4.jpg" alt="Redmi Note 5 Pro">
+				<figcaption>Xiomi Redmi Note 5 Pro</figcaption>
+			</figure>
+			
+			<figure>
+				<img src="img/g5.jpg" alt="Redmi A1 Blue">
+				<figcaption>Xiomi Redmi A1 Blue</figcaption>
+			</figure>
 
-	<figure>
-		<img src="img/g6.jpg" alt="Redmi A1 Purple">
-		<figcaption>Xiomi Redmi A1 Purple</figcaption>
-	</figure>
+			<figure>
+				<img src="img/g6.jpg" alt="Redmi A1 Purple">
+				<figcaption>Xiomi Redmi A1 Purple</figcaption>
+			</figure>
+		</div>
 	</main>
-
 	<footer>
 		<div>
 			&copy;2018 All Rights Reserved - Mohd Adnan Ansari
