--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 				Mohd Adnan Ansari
 			</h1>
 		</div>
-		<p class="about">
+		<p class="about" id="about">
 			Hello Guys!
 			I am an Engineering Student, i have done my diploma in Computer Engineering From Abdul Razzak Kalsekar Polytechnic,New Panvel.Now I am in B.E.
 		</p>
@@ -59,5 +59,6 @@
 			&copy;2018 All Rights Reserved - Mohd Adnan Ansari
 		</div>
 	</footer>
+	<script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
