--- a/index.html
+++ b/index.html
@@ -59,6 +59,7 @@
 			&copy;2018 All Rights Reserved - Mohd Adnan Ansari
 		</div>
 	</footer>
+	<script src="js/jquery-3.3.1.min.js" type="text/javascript"></script>
 	<script src="js/app.js" type="text/javascript"></script>
 </body>
 </html>
