--- a/registration.html
+++ b/registration.html
@@ -19,7 +19,7 @@
 	<h1>
 		Welcome To AIKTC	
 	</h1>
-	<form method="post" action="printinfo2.php">
+	<form method="post" action="PHP/printreg.php">
 	  <fieldset>
 	  	<legend>Personal Information</legend>
 		
